removing design labels; adding links to behance

--- a/design.html
+++ b/design.html
@@ -54,7 +54,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="">
+        <a target="_blank" href="https://www.behance.net/gallery/54897711/Shoe-campaign">
           <img class="artdesign" src="/images/rain_snow_or_fog_2_page_full_no_logo.jpg" style="">
         </a>
       </div>
@@ -80,7 +80,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="">
+        <a target="_blank" href="https://www.behance.net/gallery/54898037/Logo">
           <img class="artdesign" src="/images/wimbledon_woodworks_1.jpg" style="">
         </a>
       </div>
