adding artwork page

--- a/web2.html
+++ b/web2.html
@@ -36,16 +36,13 @@
       <p><a href="index.html">About</a></p>
       <p><a href="web.html">Web</a></p>
       <p><a href="design.html">Graphic Design</a></p>
-      <p><a href="artwork.html">Artwork</a></p>
       <p><a href="contact.html">Contact</a></p>
     </div>
 
     <!-- add a mobile-responsive png-->
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="https://sandbox.ifma.org">
-          <img class="image" src="/images/med/sandbox.ifma_med.png">
-        </a>
+        <embed width="600" height="200" src="https://sandbox.ifma.org">
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
