--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
     <p>
-      Currently available for freelance web development and design work.
+      Currently seeking web development, web design, or graphic design work.
       <br>
       <br>
       I was raised in the U.S. but born overseas. I received a B.A. in Literature, and I have experience teaching English. I also enjoy running intervals, listening to music, and changing what I put here.
