--- a/other.html
+++ b/other.html
@@ -35,6 +35,7 @@
     <p><a href="index.html">About</a></p>
     <p><a href="web.html">Web</a></p>
     <p><a href="design.html">Graphic Design</a></p>
+    <p><a href="artwork.html">Artwork</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
