--- a/other.html
+++ b/other.html
@@ -33,7 +33,7 @@
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About</a></p>
-    <p><a href="web.html">Web</a></p>
+    <p><a href="web.html">Web Development</a></p>
     <p><a href="design.html">Graphic Design</a></p>
     <p><a href="artwork.html">Artwork</a></p>
     <p><a href="contact.html">Contact</a></p>
