--- a/artwork.html
+++ b/artwork.html
@@ -42,19 +42,6 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
-          <img style="border-width: 2px; border-color: lightgray; border-style: solid;" class="artdesign" src="/images/otherart/Let's_First_Love_full.jpg" style="">
-        </a>
-      </div>
-
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href=""></a></p>
-        <p class=""><a href=""></a></p>
-      </div>
-    </div>
-
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="">
           <img class="artdesign" src="/images/otherart/Horses.jpg" style="">
         </a>
       </div>
@@ -154,7 +141,7 @@
       </div>
     </div> -->
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img class="artdesign" src="/images/otherart/maze.jpg" style="">
@@ -165,7 +152,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -232,7 +219,7 @@
       </div>
     </div> -->
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img class="artdesign" src="/images/otherart/girl.jpg" style="">
@@ -243,7 +230,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -271,7 +258,7 @@
       </div>
     </div> -->
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img class="artdesign" src="/images/otherart/poolslide.jpg" style="">
@@ -321,10 +308,10 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href="#"></a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <p class="col-lg-9 copyright">Copyright notice: All art and design copyright Pavlo Chubinskiy &copy;</p>
+      <p class="col-lg-9 copyright">Copyright notice: All art and design copyright Paul Chubinskiy &copy;</p>
     </div>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
