--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,8 @@
     <p><a href="contact.html">Contact</a></p>
   </div>
 
-  <!--<div class="col-xs-1 col-xs-offset-5 col-sm-1 col-sm-offset-5 col-md-1 col-md-offset-0 col-lg-1 col-lg-offset-0">
-    <div id="profile_background"></div>
-    <img id="profile" src="profile.jpg">
-  </div>-->
-
   <div id="content" class="col-lg-offset-4 col-md-offset-4 col-lg-6 col-md-6 col-sm-11 col-xs-11">
-    <p>email (replace the $ with @): <a href="mailto:pchubinskiy@gmail.com">pchubinskiy$gmail.com</a></p>
+    <p>email (replace the $ with a @): <a href="mailto:pchubinskiy@gmail.com">pchubinskiy$gmail.com</a></p>
     <p>LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/pchubinskiy">linkedin.com/in/pchubinskiy</a></p>
     <p>Github: <a target="_blank" href="https://github.com/pchubinskiy">pchubinskiy</a></p>
     <p>Behance: <a href="https://www.behance.net/pchubinskiy">behance.net/pchubinskiy</a> </p>
