changing link, deleting comments

--- a/web.html
+++ b/web.html
@@ -115,7 +115,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Vanilla JS <a target="_blank" href="https://tttcmyk.pancakeapps.com/">Tic-tac-toe app</a> I made during week 03/12 of a web development course.</p>
+        <p class="annotation">Vanilla JavaScript <a target="_blank" href="http://tttcmyk.pancakeapps.com/">Tic-tac-toe app</a> I made during week 03/12 of a web development course.</p>
         <p>Source code & documentation: <a target="_blank" href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
       </div>
     </div>
@@ -133,43 +133,6 @@
         </p>
       </div>
     </div>
-
-<!--     <div id="content" class="row example_set col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-      <a href="http://www.lrngo.com/coolstuff">
-        <img class="image2 left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff2.png" alt="">
-      </a>
-      <a href="http://www.lrngo.com/coolstuff">
-        <img class="image2 left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts3.png" alt="">
-      </a>
-
-      <a href="http://www.lrngo.com/music-arts">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts2.png" alt="">
-      </a>
-      <a href="http://www.lrngo.com/music-arts">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness1.png" alt="">
-      </a>
-      <a href="http://www.lrngo.com/music-arts">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness4.png" alt="">
-      </a>
-
-      <a href="http://www.lrngo.com/music-arts">
-        <img class="image2 left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
-      </a>
-
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2 left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts1.png" alt="">
-      </a>
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts4.png" alt="">
-      </a>
-
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness3.png" alt="">
-      </a>
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4 hidden-sm hidden-xs" src="/images/lrngo_landing_pages/sportsfitness2.png" alt="">
-      </a>
-    </div> -->
 
     <div id="whitespace" class="row">
       <br/>
