--- a/design.html
+++ b/design.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Design</title>
+  <title>Graphic Design</title>
   <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
   <link href="/stylesheets/artdesign.css" rel="stylesheet">
 
@@ -39,6 +39,32 @@
     <p><a href="artwork.html">Artwork</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="">
+          <img class="artdesign" src="/images/IBO_Brochure_front_resized.png" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="">
+          <img class="artdesign" src="/images/IBO_Brochure_back_resized.png" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
