--- a/design.html
+++ b/design.html
@@ -56,7 +56,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="">
-          <img class="artdesign" src="/images/IBO_Brochure_back_resized.png" style="">
+          <img class="design" src="/images/IBO_Brochure_back_resized.png" style="">
         </a>
       </div>
 
@@ -69,7 +69,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="https://www.behance.net/gallery/55248897/JusticeHub-logo">
-          <img class="artdesign" src="/images/Justice_Hub_logo_v3_rbp_gradient_resized.png" style="">
+          <img class="design" src="/images/Justice_Hub_logo_v3_rbp_gradient_resized.png" style="">
         </a>
       </div>
 
