--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
   </div>
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
-    <p>
-      Currently seeking web development, web design, or graphic design work.
+      <span>Currently seeking graphic/web design or content management work.</span>
       <br>
       <br>
-      I was raised in the U.S. but born overseas. I received a B.A. in Literature, and I have experience teaching English. I also enjoy running intervals, listening to music, and changing what I put here.
-    </p>
+      <span>I was:</span>
+      <ul>
+        <li>born in Chernivtsi, Ukraine</li>
+        <li>raised in Houston, Texas</li>
+        <li>educated in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts.</li>
+      </ul>
   </div>
 
   <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
