--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <ul>
         <li>born in Chernivtsi, Ukraine</li>
         <li>raised in Houston, Texas</li>
-        <li>educated in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts.</li>
+        <li>educated in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts</li>
       </ul>
   </div>
 
