--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
       <p>Currently seeking graphic/web design or content management work.</p>
-      <span>Currently seeking graphic/web design or content management work.</span>
+      <p>Currently seeking graphic/web design or content management work.</p>
       <br>
       <br>
-      <span>I was:</span>
+      <p>I was:</p>
       <ul>
         <li>born in Chernivtsi, Ukraine</li>
         <li>raised in Houston, Texas</li>
