--- a/index.html
+++ b/index.html
@@ -46,14 +46,13 @@
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
       <p>Currently seeking graphic/web design or content management work.</p>
-      <p>Currently seeking graphic/web design or content management work.</p>
       <br>
       <br>
       <p>I was:</p>
       <ul>
-        <li>born in Chernivtsi, Ukraine</li>
-        <li>raised in Houston, Texas</li>
-        <li>educated in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts</li>
+        <li><p>born in Chernivtsi, Ukraine</p></li>
+        <li><p>raised in Houston, Texas</p></li>
+        <li><p>educated in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts</p></li>
       </ul>
   </div>
 
