--- a/artwork.html
+++ b/artwork.html
@@ -41,6 +41,19 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/artdesign_fullsize/collage.jpg">
+          <img class="artdesign" src="/images/collage_min.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation">Collage<a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img class="artdesign" src="/images/otherart/Horses.jpg" style="">
         </a>
@@ -86,19 +99,6 @@
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation">Conceptual art<a href=""></a></p>
         <p class=""><a href=""></a></p>
-      </div>
-    </div>
-
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="/images/artdesign_fullsize/collage.jpg">
-          <img class="artdesign" src="/images/collage_min.jpg" style="">
-        </a>
-      </div>
-
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href=""></a></p>
-        <p class="">Collage<a href=""></a></p>
       </div>
     </div>
 
@@ -163,7 +163,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">Figure drawing<a href=""></a></p>
+        <p class=""><a href=""></a></p>
       </div>
     </div>
 
@@ -175,7 +175,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href=""></a></p>
+        <p class="annotation">Photography<a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
