--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
   </div>
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
-      <p>Currently seeking graphic/web design or content management work.</p>
+      <p>Currently seeking opportunities.</p>
       <br>
-      <p>I was:</p>
+      <p>I was</p>
       <ul>
         <li><p>born in Chernivtsi, Ukraine</p></li>
         <li><p>raised in Houston, Texas</p></li>
