--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
-      <p>Currently seeking opportunities.</p>
+      <p>Currently seeking opportunities</p>
       <br>
       <p>I was</p>
       <ul>
