--- a/web.html
+++ b/web.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a target="_blank" href="https://sandbox.ifma.org">One</a> of a series (<a target="_blank" href="https://it.ifma.org">1</a>, <a target="_blank" href="https://omhs.ifma.org">2</a>, <a target="_blank" href="https://nola.org">3</a>...) of WordPress sites I set up and designed while contracting for Houston non-profit IFMA.</p>
+        <p class="annotation"><a target="_blank" href="https://sandbox.ifma.org">One</a> of a series (<a target="_blank" href="https://it.ifma.org">1</a>, <a target="_blank" href="https://omhs.ifma.org">2</a>, <a target="_blank" href="https://nola.org">3</a>...) of WordPress sites I set up and designed for Houston IFMA.</p>
       </div>
     </div>
 
