--- a/design.html
+++ b/design.html
@@ -68,6 +68,19 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/pdfs/JusticeHub_wireframe.pdf">
+          <img class="design" src="/images/JusticeHub_Landing_Page.png" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="https://www.behance.net/gallery/55248897/JusticeHub-logo">
           <img class="artdesign" src="/images/Justice_Hub_logo_v3_rbp_gradient_resized.png" style="">
         </a>
