--- a/design.html
+++ b/design.html
@@ -68,7 +68,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a target="_blank" href="">
+        <a target="_blank" href="https://www.dropbox.com/s/9i87qiyjp4aabjo/JusticeHub_wireframe.pdf?dl=0">
           <img class="design" src="/images/JusticeHub_Landing_Page.png" style="">
         </a>
       </div>
