--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
     <p>LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/pchubinskiy">linkedin.com/in/pchubinskiy</a></p>
     <p>Github: <a target="_blank" href="https://github.com/pchubinskiy">pchubinskiy</a></p>
     <p>Behance: <a href="https://www.behance.net/pchubinskiy">behance.net/pchubinskiy</a> </p>
+    <p><a href="https://www.dropbox.com/s/9i87qiyjp4aabjo/JusticeHub_wireframe.pdf?dl=0">dropbox</a></p>  
     <br>
     <br>
   </div>
