--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-    <p id="name">P. Chubinskiy</p>
+    <p id="name">P Chubinskiy</p>
     <p><a href="index.html">About</a></p>
     <p><a href="web.html">Web Development</a></p>
     <p><a href="design.html">Graphic Design</a></p>
