--- a/artwork.html
+++ b/artwork.html
@@ -41,6 +41,19 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img137.jpg">
+          <img class="artdesign" src="/images/otherart/img137.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/otherart/img111.jpg">
           <img class="artdesign" src="/images/otherart/img111.jpg" style="">
         </a>
@@ -51,6 +64,306 @@
         <p class=""><a href=""></a></p>
       </div>
     </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img3995.jpg">
+          <img class="artdesign" src="/images/otherart/img3995.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img113.jpg">
+          <img class="artdesign" src="/images/otherart/img113.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img114.jpg">
+          <img class="artdesign" src="/images/otherart/img114.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img106.jpg">
+          <img class="artdesign" src="/images/otherart/img106.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img119.jpg">
+          <img class="artdesign" src="/images/otherart/img119.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img116.jpg">
+          <img class="artdesign" src="/images/otherart/img116.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img121.jpg">
+          <img class="artdesign" src="/images/otherart/img121.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/grid_2edited.jpg">
+          <img class="artdesign" src="/images/otherart/grid_2edited.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img4002.jpg">
+          <img class="artdesign" src="/images/otherart/img4002.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img0071.jpg">
+          <img class="artdesign" src="/images/otherart/img0071.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img131.jpg">
+          <img class="artdesign" src="/images/otherart/img131.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img122.jpg">
+          <img class="artdesign" src="/images/otherart/img122.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img134.jpg">
+          <img class="artdesign" src="/images/otherart/img134.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img4036.jpg">
+          <img class="artdesign" src="/images/otherart/img4036.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img128.jpg">
+          <img class="artdesign" src="/images/otherart/img128.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img133.jpg">
+          <img class="artdesign" src="/images/otherart/img133.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img130.jpg">
+          <img class="artdesign" src="/images/otherart/img130.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img115_2edited.jpg">
+          <img class="artdesign" src="/images/otherart/img115_2edited.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img112_2edited.jpg">
+          <img class="artdesign" src="/images/otherart/img112_2edited.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/mazefinalcrop.jpg">
+          <img class="artdesign" src="/images/otherart/mazefinalcrop.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/img107.jpg">
+          <img class="artdesign" src="/images/otherart/img107.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a target="_blank" href="/images/otherart/IMG-edited.jpg">
+          <img class="artdesign" src="/images/otherart/IMG-edited.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
