--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <ul>
         <li><p>born in Chernivtsi, Ukraine</p></li>
         <li><p>raised in Houston, Texas</p></li>
-        <li><p>a college student in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts and learned to become a cleverly disguised adult.</p></li>
+        <li><p>a college student in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts and learned to become cleverly disguised as a responsible adult.</p></li>
       </ul>
   </div>
 
