--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
       <p>I was</p>
       <ul>
-        <li><p>born in Chernivtsi, Ukraine</p></li>
-        <li><p>raised in Houston, Texas</p></li>
-        <li><p>a college student in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts.</p></li>
+        <li><p>I was born in Chernivtsi, Ukraine and raised in Houston, Texas.</p></li>
+        <li><p>I attended college in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts.</p></li>
       </ul>
   </div>
 
