--- a/artwork.html
+++ b/artwork.html
@@ -470,7 +470,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/artdesign_fullsize/bw_figure_full.jpg">
-          <img class="artdesign" src="/images/bw_figure_min.jpg" style="">
+          <img class="artdesign" src="/images/bw_figure_mincrop.jpg" style="">
         </a>
       </div>
 
@@ -483,7 +483,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/artdesign_fullsize/bw_figure2_full.jpg">
-          <img class="artdesign" src="/images/bw_figure2_min.jpg" style="">
+          <img class="artdesign" src="/images/bw_figure2_mincrop.jpg" style="">
         </a>
       </div>
 
