--- a/artwork.html
+++ b/artwork.html
@@ -519,7 +519,7 @@
       </div>
     </div>
 
-<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img class="artdesign" src="/images/otherart/graffiti.jpg" style="">
@@ -530,9 +530,9 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div> -->
+    </div>
 
-<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img class="artdesign" src="/images/otherart/girl.jpg" style="">
@@ -543,7 +543,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div> -->
+    </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -558,7 +558,7 @@
       </div>
     </div>
 
-<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img class="artdesign" src="/images/otherart/playgroundwater.jpg" style="">
@@ -569,9 +569,9 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div> -->
+    </div>
 
-    <!-- <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
           <img class="artdesign" src="/images/otherart/poolslide.jpg" style="">
@@ -608,7 +608,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href="#"></a></p>
       </div>
-    </div> -->
+    </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
