--- a/design.html
+++ b/design.html
@@ -159,6 +159,19 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="">
+          <img class="artdesign" src="/images/tim_howard_stamp.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="https://www.behance.net/gallery/55052197/Coffee-company-logo">
           <img target="_blank" class="artdesign" src="/images/wccc_square.jpg" style="">
         </a>
@@ -184,7 +197,7 @@
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <p style="font-size: 11px;" class="col-lg-9 copyright">Copyright notice: all art and design copyright Paul Chubinskiy&copy;</p>
+      <p style="font-size: 11px;" class="col-lg-9 copyright">Copyright notice: all art and design copyright P Chubinskiy&copy;</p>
     </div>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
