changing video caption

--- a/artwork.html
+++ b/artwork.html
@@ -488,7 +488,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href="https://vimeo.com/158437381">Engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-        <p class="">A film exploring gender that I shot and edited.<a href=""></a></p>
+        <p class="">A film exploring gender and how everyday interactions among men can take on a dance and performance-like sensibility.<a href=""></a></p>
       </div>
     </div>
 
