--- a/artwork.html
+++ b/artwork.html
@@ -36,8 +36,8 @@
     <p><a href="web.html">Web Development</a></p>
     <p><a href="design.html">Graphic Design</a></p>
     <p><a href="artwork.html">Artwork</a></p>
-      <p><a href="https://aahvs.duke.edu/student-projects/memento-trojan-horse">Sculpture</a></p>
-      <p><a href="https://player.vimeo.com/video/158437381">Video</a></p>
+      <p style="margin-left: 10px;"><a href="https://aahvs.duke.edu/student-projects/memento-trojan-horse">Sculpture</a></p>
+      <p style="margin-left: 10px;"><a href="https://player.vimeo.com/video/158437381">Video</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
