adding new link for conceptual art

--- a/artwork.html
+++ b/artwork.html
@@ -36,8 +36,9 @@
     <p><a href="web.html">Web Development</a></p>
     <p><a href="design.html">Graphic Design</a></p>
     <p><a href="artwork.html">Artwork</a></p>
-      <p style="margin-left: 10px;"><a target="_blank" href="https://aahvs.duke.edu/student-projects/memento-trojan-horse">Sculpture</a></p>
+      <p style="margin-left: 10px;"><a target="_blank" href="https://aahvs.duke.edu/student-projects/memento-trojan-horse">Sculptural iteration</a></p>
       <p style="margin-left: 10px;"><a target="_blank" href="https://player.vimeo.com/video/158437381">Video</a></p>
+      <p style="margin-left: 10px;"><a target="_blank" href="/images/otherart/triptych.jpg">Conceptual Art iteration</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
@@ -496,7 +497,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <a href="">
+        <a  target="_blank" href="/images/otherart/triptych.jpg">
           <img class="artdesign" src="/images/otherart/triptych.jpg" style="">
         </a>
       </div>
