--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
       <ul>
-        <li><p>I was born in Chernivtsi, Ukraine and raised in Houston, Texas.</p></li>
-        <li><p>I attended college in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts.</p></li>
+        <p>Pavlo is a question transplanted into the conversation, a car ride on to a flight from the Western side of Chernivtsi by way of a lucky number, a green card, and a blue passport, feeling yellow when he wants to dance, and a hop, skip, and a jump away from a deep red proclivity to blur with the markets that keep the conversation off-center.</p>
+        <!-- <li><p>I was born in Chernivtsi, Ukraine and raised in Houston, Texas.</p></li>
+        <li><p>I attended college in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts.</p></li> -->
       </ul>
   </div>
 
