--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
       <ul>
-        <p>Pavlo is an educator, artist, designer living and working in Houston, TX.</p>
+        <p>Pavlo is an educator living and working in Houston, TX.</p>
         <!-- <p>Pavlo is a question transplanted into the southwest side of Houston from Western Chernivtsi by way of a lucky number, a green card, and a blue passport, feeling yellow for a new dance, and a hop, skip, and a jump away from a deep red proclivity to blur with the exchanges that keep the conversation spiraling towards a new center.</p> -->
         <!-- <li><p>I was born in Chernivtsi, Ukraine and raised in Houston, Texas.</p></li>
         <li><p>I attended college in Durham, North Carolina, where I received a B.A. in Literature and Visual Arts.</p></li> -->
