--- a/artwork.html
+++ b/artwork.html
@@ -445,7 +445,7 @@
       </div>
     </div>
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/artdesign_fullsize/bw_figure_full.jpg">
           <img class="artdesign" src="/images/bw_figure_mincrop.jpg" style="">
@@ -469,7 +469,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
 <!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -517,11 +517,11 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href="https://vimeo.com/158437381">Engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-        <p class="">A film exploring gender and how everyday interactions among men can take on a dance and performance-like sensibility.<a href=""></a></p>
+        <p class="">A film exploring gender, gesture, and dance.<a href=""></a></p>
       </div>
     </div>
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a  target="_blank" href="/images/otherart/triptych.jpg">
           <img class="artdesign" src="/images/otherart/triptych.jpg" style="">
@@ -532,7 +532,7 @@
         <p class="annotation">Conceptual art<a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
 <!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
