--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 
   <div id="content" class="col-lg-offset-4 col-md-offset-4 col-lg-6 col-md-6 col-sm-11 col-xs-11">
     <p>email (replace the $ with a @): <a href="mailto:pchubinskiy@gmail.com">pchubinskiy$gmail.com</a></p>
-    <p>LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/pchubinskiy">linkedin.com/in/pchubinskiy</a></p>
+    <!-- <p>LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/pchubinskiy">linkedin.com/in/pchubinskiy</a></p> -->
     <p>Github: <a target="_blank" href="https://github.com/pchubinskiy">pchubinskiy</a></p>
     <p>Behance: <a href="https://www.behance.net/pchubinskiy">behance.net/pchubinskiy</a></p>
     <br>
