--- a/artwork.html
+++ b/artwork.html
@@ -510,6 +510,21 @@
       </div>
     </div>
 
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="https://aahvs.duke.edu/student-projects/memento-trojan-horse">
+          <img style="border-width: 2px; border-color: lightgray; border-style: solid;" class="artdesign" src="/images/otherart/mementofromatrojanhorse.png" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+
+
 <!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
            <iframe class="artdesign" src="https://player.vimeo.com/video/158437381" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
