--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p><a href="index.html">About</a></p>
     <p><a href="web.html">Web Development</a></p>
     <p><a href="design.html">Graphic Design/Photography</a></p>
-    <!-- <p><a href="artwork.html">Artwork/Illustration</a></p> -->
+    <p><a href="artwork.html">Artwork/Illustration</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
