--- a/artwork.html
+++ b/artwork.html
@@ -263,7 +263,7 @@
       </div>
     </div>
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/otherart/img4002.jpg">
           <img class="artdesign" src="/images/otherart/img4002.jpg" style="">
@@ -287,7 +287,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
