--- a/artwork.html
+++ b/artwork.html
@@ -532,7 +532,7 @@
         <p class="annotation"><a href="https://vimeo.com/316818216">curtain call</a> from <a href="https://vimeo.com/316818216">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         <p class="">The one who looks like everyone and no one.<a href=""></a></p>
       </div>
-    </div> -->
+    </div>
 
 
 <!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
