--- a/artwork.html
+++ b/artwork.html
@@ -68,7 +68,7 @@
       </div>
     </div>
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/otherart/dancing_woman_on_moon.jpg">
           <img class="artdesign" src="/images/otherart/dancing_woman_on_moon.jpg" style="">
@@ -105,7 +105,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -172,7 +172,7 @@
       </div>
     </div>
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/otherart/img119.jpg">
           <img class="artdesign" src="/images/otherart/img119.jpg" style="">
@@ -183,7 +183,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -211,7 +211,7 @@
       </div>
     </div>
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/otherart/img121.jpg">
           <img class="artdesign" src="/images/otherart/img121.jpg" style="">
@@ -222,7 +222,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -315,7 +315,7 @@
       </div>
     </div>
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+<!--     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/otherart/img122.jpg">
           <img class="artdesign" src="/images/otherart/img122.jpg" style="">
@@ -326,7 +326,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -354,7 +354,7 @@
       </div>
     </div>
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <!-- <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a target="_blank" href="/images/otherart/img128.jpg">
           <img class="artdesign" src="/images/otherart/img128.jpg" style="">
@@ -391,7 +391,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
