--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     <p><a href="index.html">About</a></p>
     <p><a href="web.html">Web Development</a></p>
     <p><a href="design.html">Graphic Design</a></p>
-    <!-- <p><a href="artwork.html">Artwork</a></p> -->
+    <p><a href="artwork.html">Artwork</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
