--- a/artwork.html
+++ b/artwork.html
@@ -541,7 +541,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="https://vimeo.com/158437381">Engendering</a>with sound from I Am Who I Am - The Books by <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+        <p class="annotation"><a href="https://vimeo.com/158437381">Engendering</a>with music from I Am Who I Am - The Books by <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         <p class="">A film exploring gender and gesture.<a href=""></a></p>
       </div>
     </div>
