--- a/artwork.html
+++ b/artwork.html
@@ -34,8 +34,8 @@
     <p id="name">P Chubinskiy</p>
     <p><a href="index.html">About</a></p>
     <p><a href="web.html">Web Development</a></p>
-    <p><a href="design.html">Graphic Design</a></p>
-    <p><a href="artwork.html">Artwork</a></p>
+    <p><a href="design.html">Graphic Design/Photography</a></p>
+    <p><a href="artwork.html">Artwork/Illustration</a></p>
 <!--       <p style="margin-left: 15px;"><a target="_blank" href="https://player.vimeo.com/video/158437381">Film</a></p>
       <p style="margin-left: 15px;"><a target="_blank" href="https://aahvs.duke.edu/student-projects/memento-trojan-horse">Sculpture 1.0</a></p>
       <p style="margin-left: 15px;"><a target="_blank" href="/images/otherart/triptych.jpg">Conceptual Art 1.0</a></p> -->
