--- a/web.html
+++ b/web.html
@@ -35,8 +35,8 @@
       <p id="name">P Chubinskiy</p>
       <p><a href="index.html">About</a></p>
       <p><a href="web.html">Web Development</a></p>
-      <p><a href="design.html">Graphic Design</a></p>
-      <p><a href="artwork.html">Artwork</a></p>
+      <p><a href="design.html">Graphic Design/Photography</a></p>
+      <p><a href="artwork.html">Artwork/Illustration</a></p>
       <p><a href="contact.html">Contact</a></p>
     </div>
 
